--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <body>
   <h1>Xin chào, đây là trang web Tacara!</h1>
   <p>Triển khai thử nghiệm bằng GitHub Pages.</p>
+  <a href="home.php">trang Chủ</a>
 </body>
 </html>
